tests/fixtures/compile_errors/binary_operations/lshift_bool.fe
contract Foo:
    pub def foo(a: bool, b: i256):
        a << b